--- a/lib/generators/templates/kaya_conf.tt
+++ b/lib/generators/templates/kaya_conf.tt
@@ -14,6 +14,8 @@
     "USERNAME" : null,
     "PASSWORD" : null},
 
+  "MAXIMUM_EXECS_PER_SUITE" : 3,
+
   "PROJECT_NAME" : "Awesome Project",
 
   "PROJECT_URL" : "http://your.project.url",
